[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roboreactor"
version = "0.1.8"
authors = [
    { name="Chanapai Chuadchum", email="kornbot380@hotmail.com" }
]
description = "A unified Python client for Roboreactor edge devices and robot simulators."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
"Homepage" = "https://roboreactor.com"

[tool.setuptools.packages.find]
where = ["src"]
